fix animation, slightly and change contrast of current tile

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -8,6 +8,6 @@
 }
 
 @keyframes idle {
-  from { background-position:2px 0px; }
-  to { background-position:128px 0px; }
+  from { background-position:0px 0px; }
+  to { background-position:132px 0px; }
 }
